# qr-code-backend

./: Cargo.toml  Dockerfile  README.md  Secrets.toml  fly.toml
.github/workflows/: action.yml  deploy-development.yml  development.yml  main.yml  rust.yml
docs/: DATABASE.md
src/: encoding.rs  errors.rs  guard.rs  main.rs  utils.rs
src/database/: database.rs  models.rs
src/payment/: mod.rs  models.rs  payments.rs
src/routes/: guard.rs  mod.rs  qrcode.rs  user.rs
src/tests/: mod.rs
