[package]
name = "qr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
bitvec = "1.0.1"
jsonwebtoken = "9.3.0"
serde = {version = "1.0", features = ["derive"]}
rocket_cors = "0.6.0"
reqwest = {version = "0.12.8", features = ["json"]}
base64 = "0.22.1"
