[package]
name = "qr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = {version = "1.26.0", features = ["full"]}
bitvec = "1.0.1"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.215", features = ["derive"]}
rocket_cors = "0.6.0"
reqwest = {version = "0.12.9", features = ["json"]}
base64 = "0.22.1"
serde_json = "1.0.133"
surrealdb = "2.1.4"
thiserror = "2.0.4"
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
cargo-show-asm = "0.2.48"
